create various Interfaces for the DataBase class, improve the UI, fix importer for excel, add more functions to aida and add more things and bug fixes.